# AtmosphericTurbulence

./: AtmosphericTurbulence.c  CMakeLists.txt  README.md
scripts/: runturb  syncscripts
